# fhdo-distributed-system

./: .gitignore  CMakeLists.txt  README.md  dataframe.json  workflow.txt
gpu/: GPUImplementationLink.txt  GPU_Implementation.ipynb  README.md  TruckPlatooning_CPP.ipynb  Truckplatooning_GPU.ipynb  distanceWarning.cpp
src/: .env  app.cc  app.h  following.cpp  main.cpp  notes.txt  testmain.c
src/communication/: comm_init.cpp  comm_manager.cpp  comm_manager.h  comm_msg.h  platoon_client.cpp  platoon_client.h  platoon_server.cpp  platoon_server.h
src/control/: event_manager.cpp  event_manager.h  following_truck.cpp  following_truck.h  monitor.cpp  monitor.h  trucks_manager.cpp  trucks_manager.h
src/libs/dotenv/: dotenv.c  dotenv.h
src/utils/: config.h  env.h  json.h  keygen.h  logger.cpp  logger.h  tcp_utils.cpp  tcp_utils.h  utils.h
tests/: CMakeLists.txt  command_test.cpp  following_test.cpp
